# 3Dengine

./: readme.md
docu/: diagram.d2  diagrams.drawio  keys.md  model.md  systems.md  terrain.md
source/: CMakeLists.txt
source/include/: camera.h  eventmanager.h  events.h  gamecore.h  model.h  render.h  shader.h  userinput.h
source/include/event/: event.h  inputevents.h
source/include/render/: model.h  rendersphere.h  renderterrain.h  renderui.h  textrenderer.h
source/resources/map/: map.txt
source/resources/models/: materials.mtl
source/resources/shaders/: model.fs  model.vs  shader.fs  shader.vs  sphere.fs  sphere.vs  terrain.fs  terrain.vs  textshader.fs  textshader.vs
source/src/: eventmanager.cpp  events.cpp  main.cpp  model.cpp  render.cpp  shader.cpp  userinput.cpp
source/src/event/: inputevents.cpp
source/src/render/: rendersphere.cpp  renderterrain.cpp  renderui.cpp  textrenderer.cpp
